RESOLVED FIXED301331
Fix !ENABLE(MATHML) build following 302003@main
https://bugs.webkit.org/show_bug.cgi?id=301331
Summary Fix !ENABLE(MATHML) build following 302003@main
Ross Kirsling
Reported 2025-10-23 00:40:59 PDT
.
Attachments
Ross Kirsling
Comment 1 2025-10-23 00:41:46 PDT
EWS
Comment 2 2025-10-23 00:46:27 PDT
Committed 302012@main (0c6bb54619fe): <https://commits.webkit.org/302012@main> Reviewed commits have been landed. Closing PR #52864 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-10-23 00:47:11 PDT
Note You need to log in before you can comment on or make changes to this bug.