Fix !ENABLE(MATHML) build following 302003@main https://bugs.webkit.org/show_bug.cgi?id=301331

Unreviewed build fix.

* Source/WebCore/rendering/RenderText.cpp:
(WebCore::convertToMathAuto):
Add missing #if.

Canonical link: https://commits.webkit.org/302012@main